<resources>
    <string name="app_name">Program5</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="call_and_save_application">Call and Save Application</string>
    <string name="enter_number_here">EnterNumber</string>
    <string name="delete">Delete</string>
    <string name="star">*</string>
    <string name="hash">#</string>
    <string name="call">CALL</string>
    <string name="save">SAVE</string>
</resources>